# nexa-analise-avancada-de-imagens-e-texto-com-ia-na-aws

ocr_lista_escolar/: README.md  main.py  pyproject.toml
reconhecimento_celebridades/: README.md  main.py
