[project]
name = "ocr-lista-escolar"
version = "0.1.0"
description = "Um projeto para extrair texto de listas de material escolar usando AWS Textract."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
    "boto3-stubs[textract]>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ocr-lista-escolar = "ocr_lista_escolar.cli:main"